
	Deprecate built-in pseudo-function  `if defined(foo)`
	Replace it with string function exists("foo")
	The previous version (defined) tried to bypass normal expression
	parsing, but succeeded only for the simplest cases. This variant,
	although deprecated, is still supported by BACKWARDS_COMPATIBLE.
	The new version handles the full general case by using string variables.
	Bugfix: #1497957

2006-06-08  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.h:
	* src/wxterminal/wxt_plot.h:
	* src/wxterminal/wxt_term.h:
	Remove "extern" for functions.

2006-06-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (--with-wx-config=PATH): Fix wrong variable name.

	* src/term.c (init_terminal) [WXWIDGETS]: Take DEFAULTTERM into account.

	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Write the hotspot coordinates directly in the cursor files.

	* src/wxterminal/wxt_gui.h (wxtApp::LoadCursor):
	* src/wxterminal/wxt_gui.cpp (wxtApp::LoadCursor):
	Remove hotpost arguments, take hotspot coordinates from the XPM files.
	(wxtApp::OnInit): Update calls to LoadCursor.

	* src/wxterminal/gp_cairo.h (current_xmax): Rename to the more
	meaningful device_xmax.
	(current_ymax): Rename to device_ymax.
	* src/wxterminal/gp_cairo.c: All callers changed.
	* src/wxterminal/wxt_gui.cpp: Likewise.

2006-06-06  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/setshow.h config/config.*: Move definition of
	BACKWARDS_COMPATIBLE into config.h and the various config.* files rather
	than setshow.h so that it is visible to all the source files.

2006-06-06  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (device_y): Fix computation of
	coordinates.
	(gnuplot_y): Likewise.

2006-06-05  Peter Weilbacher  <paepse@users.sourceforge.net>

	SF Patch [1498727] "Remove duplicate entries in GNU readline history"
