@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: color.c,v 1.65 2006/03/26 05:08:27 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: color.c,v 1.66 2006/04/05 01:09:43 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - color.c */
@@ -115,17 +115,24 @@ make_palette()
     /* ask for suitable number of colours in the palette */
     i = term->make_palette(NULL);
     if (i == 0) {
+#if (0)	/* This optimization doesn't work, because it assumes a specific */
+	/* sequence of palette loads in the output stream. If you view   */
+	/* PostScript pages out of order, they will use the wrong palette*/
+
 	/* terminal with its own mapping (PostScript, for instance)
 	   It will not change palette passed below, but non-NULL has to be
 	   passed there to create the header or force its initialization
 	 */
-
 	if (memcmp(&prev_palette, &sm_palette, sizeof(t_sm_palette))) {
 	    term->make_palette(&sm_palette);
 	    prev_palette = sm_palette;
 	    FPRINTF(("make_palette: calling term->make_palette for term with ncolors == 0\n"));
 	} else
 	    FPRINTF(("make_palette: skipping duplicate palette for term with ncolors == 0\n"));
+#else
+	term->make_palette(&sm_palette);
+	prev_palette = sm_palette;
+#endif
 	return 0;
     }
 
